--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Blog bruno-dev</title>
+	<title>Warrior Developer Blog</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-blue.min.css" />
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -10,16 +10,10 @@
 	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 	  <header class="mdl-layout__header">
 	    <div class="mdl-layout__header-row">
-	      <!-- Title -->
-	      <span class="mdl-layout-title">Title</span>
-	      <!-- Add spacer, to align navigation to the right -->
+	      <span class="mdl-layout-title">Warrior Developer Blog</span>
 	      <div class="mdl-layout-spacer"></div>
-	      <!-- Navigation. We hide it in small screens. -->
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
-	        <a class="mdl-navigation__link" href="">Link</a>
-	        <a class="mdl-navigation__link" href="">Link</a>
-	        <a class="mdl-navigation__link" href="">Link</a>
-	        <a class="mdl-navigation__link" href="">Link</a>
+	        <a class="mdl-navigation__link" href="index.html">Home</a>
 	      </nav>
 	    </div>
 	  </header>
@@ -31,7 +25,7 @@
 
 
 
-	    	<!-- Your content goes here -->
+	    	<h2 align="center" style="margin-top: 100px;">Em contrução</h2>
 
 
 
